KAS-3708 Replace legacy auk-checkbox instances with au-control-checkbox (part 1)

--- a/app/components/agenda/agendaitem/create-agendaitem.hbs
+++ b/app/components/agenda/agendaitem/create-agendaitem.hbs
@@ -48,10 +48,10 @@
               {{#each this.subcases as |subcase|}}
                 <tr data-test-create-agendaitem-row>
                   <td class="auk-table__col--1">
-                    <Auk::Checkbox
+                    <AuControlCheckbox
                       data-test-create-agendaitem-row-subcase-checkbox={{true}}
                       @checked={{includes subcase this.selectedSubcases}}
-                      {{on "input" (fn this.selectSubcase subcase)}}
+                      @onChange={{fn this.selectSubcase subcase}}
                     />
                   </td>
                   <td class="auk-table__col--11">
