--- a/app/components/documents/batch-details/batch-documents-details-modal.hbs
+++ b/app/components/documents/batch-details/batch-documents-details-modal.hbs
@@ -7,10 +7,10 @@
           <tr>
             {{#if (user-may "manage-documents")}}
               <th class="auk-table-checkbox-col">
-                <Auk::Checkbox
+                <AuControlCheckbox
                   data-test-batch-documents-details-select-all
                   @checked={{this.areAllSelected}}
-                  {{on "input" this.toggleAllSelection}}
+                  @onChange={{this.toggleAllSelection}}
                 />
               </th>
             {{/if}}
