--- a/app/components/publications/publication/publication-activities/publication-request-modal.hbs
+++ b/app/components/publications/publication/publication-activities/publication-request-modal.hbs
@@ -33,10 +33,10 @@
           />
         </div>
         <div class="auk-form-group auk-u-mt-4">
-          <Auk::Checkbox
+          <AuControlCheckbox
             @label={{t "update-publication-status-publication-requested"}}
             @checked={{this.mustUpdatePublicationStatus}}
-            {{on "input" this.setPublicationRequestedStatus}}
+            @onChange={{this.setPublicationRequestedStatus}}
           />
         </div>
         <div class="auk-form-group">
