--- a/app/components/publications/publication/translations/translation-upload-modal.hbs
+++ b/app/components/publications/publication/translations/translation-upload-modal.hbs
@@ -15,11 +15,11 @@
       @onDeletePiece={{perform this.deleteUploadedPiece}}
     />
     <div class="auk-form-group auk-u-mt-4">
-      <Auk::Checkbox
+      <AuControlCheckbox
         data-test-translation-upload-update-status
         @label={{t "update-publication-status-translation-received"}}
         @checked={{this.mustUpdatePublicationStatus}}
-        {{on "input" this.setTranslationReceivedStatus}}
+        @onChange={{this.setTranslationReceivedStatus}}
       />
     </div>
     <div
