--- a/app/components/publications/overview/publications-table-display-config-modal.hbs
+++ b/app/components/publications/overview/publications-table-display-config-modal.hbs
@@ -25,26 +25,28 @@
 </div>
 <div class="auk-popover__body">
   {{#each this.optionColumns as |column|}}
-    <Auk::CheckboxList>
-      {{#each column as |option|}}
-        <Auk::Checkbox
+    {{#each column as |option|}}
+      <div>
+        <AuControlCheckbox
           data-test-overview-table-display-config-option-checkbox={{option.keyName}}
           @checked={{includes option @tableConfig.visibleColumns}}
-          {{on "input" (fn this.toggleColumnVisibility option.keyName)}}
+          @onChange={{fn this.toggleColumnVisibility option.keyName}}
         >
-          {{t option.translationKey}}
-          {{#if
-            (not-eq
-              (t option.translationKey) (t option.translationKeySmall)
-            )
-          }}
-            <span class="auk-u-text-size--small auk-u-text-muted">
-              ({{t option.translationKeySmall}})
-            </span>
-          {{/if}}
-        </Auk::Checkbox>
-      {{/each}}
-    </Auk::CheckboxList>
+          <span>
+            {{t option.translationKey}}
+            {{#if
+              (not-eq
+                (t option.translationKey) (t option.translationKeySmall)
+              )
+            }}
+              <span class="auk-u-text-size--small auk-u-text-muted">
+                ({{t option.translationKeySmall}})
+              </span>
+            {{/if}}
+          </span>
+        </AuControlCheckbox>
+      </div>
+    {{/each}}
   {{/each}}
   <AuButton
     class="auk-u-mt-2"
