--- a/app/components/publications/overview/reports/generate-report-modal.hbs
+++ b/app/components/publications/overview/reports/generate-report-modal.hbs
@@ -97,37 +97,37 @@
       {{#if @userInputFields.governmentDomains}}
         <div class="auk-form-group">
           <Auk::Label>{{t "government-domains"}}</Auk::Label>
-          <Auk::CheckboxList>
             {{#each this.governmentDomains as |governmentDomain|}}
-              <Auk::Checkbox
-                @checked={{includes
-                  governmentDomain
-                  this.selectedGovernmentDomains
-                }}
-                {{on "input" (fn this.selectGovernmentDomain governmentDomain)}}
-              >
-                {{governmentDomain.label}}
-              </Auk::Checkbox>
+              <div>
+                <AuControlCheckbox
+                  @checked={{includes
+                    governmentDomain
+                    this.selectedGovernmentDomains
+                  }}
+                  @onChange={{fn this.selectGovernmentDomain governmentDomain}}
+                >
+                  {{governmentDomain.label}}
+                </AuControlCheckbox>
+               </div>
             {{/each}}
-          </Auk::CheckboxList>
         </div>
       {{/if}}
       {{#if @userInputFields.regulationTypes}}
         <div class="auk-form-group">
           <Auk::Label>{{t "regulation-types"}}</Auk::Label>
-          <Auk::CheckboxList>
             {{#each this.regulationTypes as |regulationType|}}
-              <Auk::Checkbox
-                @checked={{includes
-                  regulationType
-                  this.selectedRegulationTypes
-                }}
-                {{on "input" (fn this.selectRegulationType regulationType)}}
-              >
-                {{regulationType.label}}
-              </Auk::Checkbox>
+              <div>
+                <AuControlCheckbox
+                  @checked={{includes
+                    regulationType
+                    this.selectedRegulationTypes
+                  }}
+                  @onChange={{fn this.selectRegulationType regulationType}}
+                >
+                  {{regulationType.label}}
+                </AuControlCheckbox>
+              </div>
             {{/each}}
-          </Auk::CheckboxList>
         </div>
       {{/if}}
     </Utils::LoadableContent>
