--- a/app/components/user-role-filter.hbs
+++ b/app/components/user-role-filter.hbs
@@ -3,10 +3,10 @@
 {{else}}
   <Auk::Label>{{t "filter-on-rights"}}</Auk::Label>
   {{#each this.roles as |role|}}
-    <Auk::Checkbox
-      @checked={{includes role this.selected}}
+    <AuControlCheckbox
       @label={{role.label}}
-      {{on "click" (fn this.toggleRole role)}}
+      @checked={{includes role this.selected}}
+      @onChange={{fn this.toggleRole role}}
     />
   {{/each}}
 {{/if}}
