fix document card mockup

--- a/app/components/documents/document-card-list.hbs
+++ b/app/components/documents/document-card-list.hbs
@@ -11,6 +11,7 @@
         @markForSignature={{@markForSignature}}
         @unmarkForSignature={{@unmarkForSignature}}
         @onAddPiece={{@onAddPiece}}
+        @nameMockup={{@nameMockup}}
       />
     </div>
   {{else}}
