--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -119,7 +119,6 @@
       </div>
       <WebComponents::VlRdfaEditor
         data-test-newsletter-edit-item-rdfa-editor
-        @richtext="{{this.richtext}}"
         @handleRdfaEditorInit={{this.handleRdfaEditorInit}}
       />
     </div>
@@ -133,13 +132,20 @@
       />
     </div>
     {{else}}
-    <AuAlert
+    {{!-- <AuAlert
       @title="Nog geen tekst toegevoegd"
       @icon="circle-info"
       @skin="info"
       @size="small"
       @closable={{false}}
-    />
+    /> --}}
+    <AuContent @size="small">
+      <h4>Betreft :</h4>
+      <p>Toegang havens<br/>Voorontwerp van koninklijk besluit betreffende het verbieden van toegang tot de Belgische havens door gesanctioneerde schepen<br/>Betrokkenheid van de Vlaamse Regering<br/>Standpuntbepaling<br/>(VR 2022 3009 DOC.1056/1 en DOC.1056/2)</p> 
+      <h4>Beslissing :</h4>
+      <p>De Vlaamse Regering beslist:</p>
+      <ol><li>in te stemmen met bovengenoemd voorontwerp van koninklijk besluit;</li><li>de minister-president van de Vlaamse Regering te gelasten de federale minister van Noordzee van deze beslissing in kennis te stellen.</li></ol>
+    </AuContent>
     <p>
       {{#if this.isSigned}}
       <AuPill @icon="sign" @size="small" @skin="success">Getekend</AuPill>
