KAS-3732 fix it being possible to create subcase before agendaitemtype concepts are loaded

--- a/app/components/cases/new-subcase.hbs
+++ b/app/components/cases/new-subcase.hbs
@@ -130,7 +130,7 @@
     <AuButton
       data-test-new-subcase-save
       @skin="primary"
-      @disabled={{this.areSavingTasksRunning}}
+      @disabled={{or this.areSavingTasksRunning this.areLoadingTasksRunning}}
       @loading={{or this.areSavingTasksRunning this.areLoadingTasksRunning}}
       {{on "click" (perform this.saveSubcase)}}
     >
