--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -58,7 +58,7 @@
       {{/if}}
     </Auk::Toolbar::Group>
     <Auk::Toolbar::Group @position="right" class="auk-u-mr-3">
-      {{#if this.currentSession.isImpersonated}}
+      {{#if this.currentSession.isImpersonator}}
         <Auk::Toolbar::Item class="auk-u-mr-3">
           <div class="vlc-environment-pill">
             {{t "you-see-the-app-as" name=this.impersonation.role.label}}
