--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -152,6 +152,16 @@
                 >
                   {{t "change-role"}}
                 </AuButton>
+                {{#if this.currentSession.isImpersonator}}
+                  <AuButton
+                    @skin="link"
+                    @alert={{true}}
+                    {{on "click" this.stopImpersonation}}
+                    role="menuitem"
+                  >
+                    {{t "revert-role"}}
+                  </AuButton>
+                {{/if}}
               {{/if}}
               <AuButton
                 data-test-m-header-user-action-logout
