--- a/app/templates/styleguide/panel.hbs
+++ b/app/templates/styleguide/panel.hbs
@@ -125,7 +125,7 @@
         </Auk::Toolbar::Group>
         <Auk::Toolbar::Group @position="right">
           <Auk::Toolbar::Item>
-            <Auk::Checkbox @label="Toon opties" />
+            <AuControlCheckbox @label="Toon opties" />
           </Auk::Toolbar::Item>
         </Auk::Toolbar::Group>
       </Auk::Toolbar>
