--- a/app/templates/styleguide.hbs
+++ b/app/templates/styleguide.hbs
@@ -66,7 +66,7 @@
             <LinkTo @route="styleguide.checkbox-tree">Checkbox tree</LinkTo>
           </li>
           <li>
-            <LinkTo @route="styleguide.checkboxes-radio-buttons">{{t "style-guide-checkboxes-radio-buttons"}}</LinkTo>
+            <LinkTo @route="styleguide.radio-buttons">{{t "style-guide-radio-buttons"}}</LinkTo>
           </li>
           <li>
             <LinkTo @route="styleguide.color-badge">Color badges</LinkTo>
