refactor: update news-item model

--- a/app/components/agenda/agendaitem/agendaitem-case-panel.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel.hbs
@@ -2,7 +2,7 @@
   <Agenda::Agendaitem::AgendaitemCasePanel::AgendaitemCasePanelEdit
     @agendaitem={{@agendaitem}}
     @subcase={{@subcase}}
-    @newsletterInfo={{@newsletterInfo}}
+    @newsItem={{@newsItem}}
     @onCancel={{this.cancelEditing}}
     @onSave={{this.stopEditing}}
   />
@@ -11,7 +11,7 @@
     @agendaitem={{@agendaitem}}
     @subcase={{@subcase}}
     @agenda={{@agenda}}
-    @newsletterInfo={{@newsletterInfo}}
+    @newsItem={{@newsItem}}
     @onClickEdit={{this.startEditing}}
     @allowEditing={{@allowEditing}}
   />
