--- a/app/components/newsletter-item/edit-panel.hbs
+++ b/app/components/newsletter-item/edit-panel.hbs
@@ -115,7 +115,7 @@
             </div>
             <WebComponents::VlRdfaEditor
               data-test-newsletter-edit-item-rdfa-editor
-              @richtext={{this.richtext}}
+              @richtext={{this.htmlContent}}
               @handleRdfaEditorInit={{this.handleRdfaEditorInit}}
             />
           </div>
