--- a/app/components/newsletter-item/view-panel.hbs
+++ b/app/components/newsletter-item/view-panel.hbs
@@ -42,7 +42,7 @@
       <SanitizeHtml
         class="auk-u-overflow-wrap-anywhere"
         @raw={{true}}
-        @value={{@newsletterItem.richtext}}
+        @value={{@newsletterItem.htmlContent}}
       />
     </AuContent>
   </Auk::Panel::Body>
