--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -25,7 +25,7 @@
             <Auk::Tab @route="cases" data-test-m-header-cases>
               {{t "cases"}}
             </Auk::Tab>
-            {{#if (user-may "manage-newsletter-infos")}}
+            {{#if (user-may "manage-news-items")}}
               <Auk::Tab
                 @route="newsletters"
                 @current-when="newsletters newsletter"
