--- a/app/templates/agenda/agendaitems/agendaitem/index.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/index.hbs
@@ -44,7 +44,7 @@
   @agendaitem={{this.model}}
   @subcase={{this.subcase}}
   @agenda={{this.agenda}}
-  @newsletterInfo={{this.newsletterInfo}}
+  @newsItem={{this.newsItem}}
   @allowEditing={{user-may "manage-agendaitems"}}
 />
 {{#if (is-announcement @model.type)}}
