--- a/app/templates/newsletter/index.hbs
+++ b/app/templates/newsletter/index.hbs
@@ -22,13 +22,13 @@
           <ThSortable
             @class="lt-column align-left"
             @currentSorting={{this.sort}}
-            @field="treatment.newsletterInfo.inNewsletter,number"
+            @field="treatment.newsItem.inNewsletter,number"
             @label={{t "show-in-newsletter"}}
           />
           <ThSortable
             @class="lt-column align-left"
             @currentSorting={{this.sort}}
-            @field="treatment.newsletterInfo.modified"
+            @field="treatment.newsItem.modified"
             @label={{t "latest-modified"}}
           />
           <th class="c-table__header c-table__header--actions"></th>
@@ -39,7 +39,7 @@
           <NewsletterItem::TableRow
             @agendaitem={{item.agendaitem}}
             @newsletterItem={{item.newsletterItem}}
-            @onSave={{perform this.saveNewsletterItem}}
+            @onSave={{fn (perform this.saveNewsletterItem) item.agendaitem}}
           />
         {{/each}}
       </tbody>
