feat: discard file uploads that exceed max size limit for mail attachments

--- a/app/components/publications/publication/proofs/proof-request-modal.hbs
+++ b/app/components/publications/publication/proofs/proof-request-modal.hbs
@@ -17,9 +17,7 @@
           <Auk::Label @required={{true}}>
             {{t "attachments"}}
           </Auk::Label>
-          <Auk::FileUploader
-            @multiple={{true}}
-            @reusable={{true}}
+          <Publications::Publication::RequestUploader
             @onUpload={{this.uploadPiece}}
           />
           <Publications::Publication::PublicationDocumentsList
