--- a/app/components/publications/publication/translations/translation-request-modal.hbs
+++ b/app/components/publications/publication/translations/translation-request-modal.hbs
@@ -69,9 +69,7 @@
         <Auk::Label @required={{true}}>
           {{t "attachments"}}
         </Auk::Label>
-        <Auk::FileUploader
-          @multiple={{true}}
-          @reusable={{true}}
+        <Publications::Publication::RequestUploader
           @onUpload={{this.uploadPiece}}
         />
         <Publications::Publication::PublicationDocumentsList
