chore: replace /overzicht pages with index routes
Also removes any index and loading route definitions from router.js

--- a/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-case-panel/agendaitem-case-panel-view.hbs
@@ -23,7 +23,7 @@
                   @icon="chevron-right"
                   @iconAlignment="right"
                   @disabled={{this.loadCase.isRunning}}
-                  @route="cases.case.subcases.subcase.overview"
+                  @route="cases.case.subcases.subcase.index"
                   @models={{array this.decisionmakingFlow.id @subcase.id}}
                 >
                   {{t "to-subcase"}}
