--- a/app/components/subcases/subcase-detail-nav.hbs
+++ b/app/components/subcases/subcase-detail-nav.hbs
@@ -1,9 +1,9 @@
 <Auk::Tabs @reversed={{true}}>
   <Auk::Tab
-    @route="cases.case.subcases.overview"
+    @route="cases.case.subcases"
     @isHierarchicalBack={{true}}
   />
-  <Auk::Tab data-test-subcase-detail-nav-overview @route="cases.case.subcases.subcase.overview">
+  <Auk::Tab data-test-subcase-detail-nav-overview @route="cases.case.subcases.subcase.index">
     {{t "overview"}}
   </Auk::Tab>
   <Auk::Tab data-test-subcase-detail-nav-documents @route="cases.case.subcases.subcase.documents">
