--- a/app/components/subcases/subcase-item.hbs
+++ b/app/components/subcases/subcase-item.hbs
@@ -27,7 +27,7 @@
         <div class="auk-u-mb-2">
           <LinkTo
             data-test-subcase-item-link
-            @route="cases.case.subcases.subcase.overview"
+            @route="cases.case.subcases.subcase.index"
             @models={{array @decisionmakingFlow.id @subcase.id}}
             class="auk-h4"
           >
