--- a/app/templates/settings/system-alerts/index.hbs
+++ b/app/templates/settings/system-alerts/index.hbs
@@ -21,7 +21,7 @@
         <Auk::Toolbar::Item>
           <AuLink
             @skin="button-naked"
-            @route="settings.overview"
+            @route="settings"
           >
             {{t "cancel"}}
           </AuLink>
