--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -7,7 +7,7 @@
         <Auk::Toolbar::Item>
           <Auk::Tabs>
             <Auk::Tab
-              @route="settings.overview"
+              @route="settings.index"
               data-test-route-settings-general-settings
             >
               {{t "general-settings"}}
